--- a/src/pages/GameContent/GameContent.css
+++ b/src/pages/GameContent/GameContent.css
@@ -139,3 +139,14 @@
     text-align: center;
     margin: 5% 0 3% 0;
 }
+
+@media (max-width: 375px){
+    .card-absolute{
+        position: relative;
+        width: 100%;
+        margin: 0;
+    }
+    .main-cont-game{
+        margin: 0;
+    }
+}
