--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -23,6 +23,7 @@
   height: auto;
   font-size: 2em;
   border-bottom: 1px solid var(--primario);
+  cursor: pointer;
   
   animation-name: roll-in-left;
   animation-duration: 1s;
@@ -104,6 +105,7 @@
     border: none;
     background-color: var(--primario);
     color: white;
+    text-shadow: 3px 3px 2px rgba(0,0,0,0.6);
     font-size: 1em;
     padding: 5px;
     cursor: pointer;
@@ -114,4 +116,14 @@
   .signoff:hover{
     transition: all 100ms;
     background-color: #9346ff;
+  }
+
+  @media (max-width: 375px){
+    .nav-ul li::before{
+      width: 0;
+    }
+    .nav-ul li h3{
+      color: var(--secundario);
+      right: 20px;
+    }
   }
