--- a/src/pages/AboutMe/AboutMe.css
+++ b/src/pages/AboutMe/AboutMe.css
@@ -43,8 +43,6 @@ box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.75);
 -webkit-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.75);
 -moz-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.75);
 border-radius: 20px;
-
-
 transform:
     perspective(800px)
     rotateY(-8deg);
@@ -113,4 +111,27 @@ transform:
 
 .redes td{
     padding: 20px;
+}
+
+@media (max-width: 375px){
+    .about-flags{
+        position: relative;
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        transform: none;
+    }
+    .about-contain{
+        display: flex;
+        flex-direction: column;
+    }
+    .about-grid{
+        margin: 0;
+        display: flex;
+        flex-direction: column;
+    }
+    .about-img img{
+        width: 100vw;
+        transform: none;
+    }
 }
