--- a/src/pages/Register/Register.css
+++ b/src/pages/Register/Register.css
@@ -14,7 +14,7 @@
 }
 
 .flex-form{
-    width: 30%;
+    
     height: 100%;
     display: flex;
     justify-content: center;
@@ -35,6 +35,7 @@
 
 .input-i-cont{
     display: flex;
+    justify-content: center;
     padding: 5%;
 }
 
@@ -74,6 +75,7 @@
 }
 
 .btn-log{
+    width: 50%;
     padding: 5%;
     margin: 5%;
     background-color: var(--primario);
@@ -132,4 +134,14 @@
 
 .signup-cont p:hover{
     color: var(--primario);
+}
+
+.errores-catch{
+    color: rgb(168, 4, 4);
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+ 
 }
