--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,12 +1,4 @@
-:root {
-    --primario: #8338ec;
-    --secundario: #3a86ff;
-    --terciario: #ff006e;
-    --cuarto: #fb5607;
-    --quinto: #ffbe0b;
-}
-
-.nav-cont{
+.nav-cont {
   display: flex;
   justify-content: space-around;
   background-color: #000000;
@@ -16,7 +8,7 @@
   width: 100%;
 }
 
-.nav-cont i{
+.nav-cont i {
   background-color: black;
   color: var(--primario);
   width: 70px;
@@ -24,7 +16,7 @@
   font-size: 2em;
   border-bottom: 1px solid var(--primario);
   cursor: pointer;
-  
+
   animation-name: roll-in-left;
   animation-duration: 1s;
   animation-timing-function: ease;
@@ -32,98 +24,97 @@
   animation-iteration-count: 1;
   animation-direction: normal;
   animation-fill-mode: none;
-  
 }
 
 @keyframes roll-in-left {
-  0%{
+  0% {
     -webkit-transform: translateX(-800px) rotate(-540deg);
     transform: translateX(-800px) rotate(-540deg);
     opacity: 0;
   }
-  100%{
+  100% {
     -webkit-transform: translateX(0) rotate(0deg);
     transform: translateX(0) rotate(0deg);
     opacity: 1;
   }
 }
 
-
-.nav-ul{
-    list-style-type: none;
-    text-decoration: none;
-}
-
-.nav-ul li{
-    display: inline-block;
-    padding: 0px 50px;
-    cursor: pointer;
+.nav-ul {
+  list-style-type: none;
+  text-decoration: none;
 }
 
 .nav-ul li {
-    position: relative;
-  }
+  display: inline-block;
+  padding: 0px 50px;
+  cursor: pointer;
+}
+
+.nav-ul li {
+  position: relative;
+}
+.nav-ul li::before {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: -0.5rem;
+  width: 0.2rem;
+  height: 100%;
+  background: var(--menu-link-active-color);
+  transition: 0.6s;
+}
+.nav-ul li h3 {
+  --menu-link-color: var(--menu-link-active);
+  position: relative;
+  background: linear-gradient(var(--menu-link-active-color) 0 100%) left/0
+    no-repeat;
+  color: rgba(58, 134, 255, 0.6);
+  background-clip: text;
+  -webkit-background-clip: text;
+  transition: background-size 0.45s 0.04s;
+}
+
+.nav-ul li:nth-child(1) {
+  --menu-link-active-color: var(--secundario);
+}
+.nav-ul li:nth-child(2) {
+  --menu-link-active-color: var(--secundario);
+}
+.nav-ul li:nth-child(3) {
+  --menu-link-active-color: var(--secundario);
+}
+
+.nav-ul li:hover::before {
+  left: calc(100% + 1rem);
+}
+.nav-ul li:hover h3 {
+  background-size: 100%;
+}
+
+.signoff {
+  border-radius: 20px;
+  border: none;
+  background-color: var(--primario);
+  color: white;
+  text-shadow: 3px 3px 2px rgba(0, 0, 0, 0.6);
+  font-size: 1em;
+  padding: 5px;
+  cursor: pointer;
+  width: 100px;
+  transition: all 100ms;
+}
+
+.signoff:hover {
+  transition: all 100ms;
+  background-color: #9346ff;
+}
+
+@media (max-width: 375px) {
   .nav-ul li::before {
-    position: absolute;
-    content: "";
-    top: 0;
-    left: -0.5rem;
-    width: 0.20rem;
-    height: 100%;
-    background: var(--menu-link-active-color);
-    transition: 0.6s;
+    width: 0;
   }
   .nav-ul li h3 {
-    --menu-link-color: var(--menu-link-active);
-    position: relative;
-    background: linear-gradient(var(--menu-link-active-color) 0 100%) left/0 no-repeat;
-    color: rgba(58, 134, 255, 0.6);
-    background-clip: text;
-    -webkit-background-clip: text;
-    transition: background-size 0.45s 0.04s;
+    color: var(--secundario);
+    right: 20px;
   }
-  
-  .nav-ul li:nth-child(1) {
-    --menu-link-active-color: var(--secundario);
-  }
-  .nav-ul li:nth-child(2) {
-    --menu-link-active-color: var(--secundario);
-  }
-  .nav-ul li:nth-child(3) {
-    --menu-link-active-color: var(--secundario);
-  }
-  
-  .nav-ul li:hover::before {
-    left: calc(100% + 1rem);
-  }
-  .nav-ul li:hover h3 {
-    background-size: 100%;
-  }
-  
-  .signoff{
-    border-radius: 20px;
-    border: none;
-    background-color: var(--primario);
-    color: white;
-    text-shadow: 3px 3px 2px rgba(0,0,0,0.6);
-    font-size: 1em;
-    padding: 5px;
-    cursor: pointer;
-    width: 100px;
-    transition: all 100ms;
-  }
-
-  .signoff:hover{
-    transition: all 100ms;
-    background-color: #9346ff;
-  }
-
-  @media (max-width: 375px){
-    .nav-ul li::before{
-      width: 0;
-    }
-    .nav-ul li h3{
-      color: var(--secundario);
-      right: 20px;
-    }
-  }
+}
