--- a/src/pages/FetchApi/FetchApi.css
+++ b/src/pages/FetchApi/FetchApi.css
@@ -1,142 +1,178 @@
-*{
-    box-sizing: border-box;
-    margin: 0;
-  }
-
-  :root {
-    --primario: #8338ec;
-    --secundario: #3a86ff;
-    --terciario: #ff006e;
-    --cuarto: #fb5607;
-    --quinto: #ffbe0b;
+* {
+  box-sizing: border-box;
+  margin: 0;
 }
 
-.img-display{
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    justify-items: center;
-    padding: 20px 0px;
+.img-display {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(330px, 1fr));
+  gap: 10px;
+  justify-items: center;
+  width: 70%;
+  /* border-right: 1px solid black; */
 }
 
-.cont-select-input{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 20px;
+.cont-select-input {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
 }
 
-.search-box{
-    margin-left: 40px;
-    width: fit-content;
-    height: fit-content;
-    position: relative;
-    
-  }
+.search-box {
+  margin-left: 40px;
+  width: fit-content;
+  height: fit-content;
+  position: relative;
+}
 
-  .input-search{
-    height: 50px;
-    width: 50px;
-    border-style: none;
-    padding: 10px;
-    font-size: 18px;
-    letter-spacing: 2px;
-    outline: none;
-    border-radius: 25px;
-    transition: all .5s ease-in-out;
-    background-color: var(--secundario);
-    padding-right: 40px;
-    color:#fff;
-    
-  }
+.input-search {
+  height: 50px;
+  width: 50px;
+  border-style: none;
+  padding: 10px;
+  font-size: 18px;
+  letter-spacing: 2px;
+  outline: none;
+  border-radius: 25px;
+  transition: all 0.5s ease-in-out;
+  background-color: var(--secundario);
+  padding-right: 40px;
+  color: #fff;
+}
 
-  .input-search::placeholder{
-    color:rgba(255,255,255,.5);
-    font-size: 18px;
-    letter-spacing: 2px;
-    font-weight: 100;
-  }
+.input-search::placeholder {
+  color: rgba(255, 255, 255, 0.5);
+  font-size: 18px;
+  letter-spacing: 2px;
+  font-weight: 100;
+}
 
-  .btn-search{
-    width: 50px;
-    height: 50px;
-    border-style: none;
-    font-size: 20px;
-    font-weight: bold;
-    outline: none;
-    cursor: pointer;
-    border-radius: 50%;
-    position: absolute;
-    right: 0px;
-    color:#ffffff ;
-    background-color:transparent;
-    pointer-events: painted;  
-  }
+.btn-search {
+  width: 50px;
+  height: 50px;
+  border-style: none;
+  font-size: 20px;
+  font-weight: bold;
+  outline: none;
+  cursor: pointer;
+  border-radius: 50%;
+  position: absolute;
+  right: 0px;
+  color: #ffffff;
+  background-color: transparent;
+  pointer-events: painted;
+}
 
-  .btn-search:focus ~ .input-search{
-    width: 300px;
-    border-radius: 0px;
-    background-color: transparent;
-    border-bottom:1px solid rgba(255,255,255,.5);
-    transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
-  }
+.btn-search:focus ~ .input-search {
+  width: 300px;
+  border-radius: 0px;
+  background-color: transparent;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+  transition: all 500ms cubic-bezier(0, 0.11, 0.35, 2);
+}
 
-  .input-search:focus{
-    width: 300px;
-    border-radius: 0px;
-    background-color: transparent;
-    border-bottom:1px solid rgba(255,255,255,.5);
-    transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
-  }
+.input-search:focus {
+  width: 300px;
+  border-radius: 0px;
+  background-color: transparent;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+  transition: all 500ms cubic-bezier(0, 0.11, 0.35, 2);
+}
 
-  
+/* SELECT */
 
-  /* SELECT */
+.select-cont {
+  position: relative;
+  border: 1px solid white;
+  width: 15%;
+  height: 30px;
+  overflow: hidden;
+  background-color: var(--secundario);
+}
 
-  .select-cont{
-    position: relative;
-    border: 1px solid white;
-    width: 15%;
-    height: 30px;
-    overflow: hidden;
-    background-color: var(--secundario);
-    
-  }
-
-  .select-cont:before {
-    content: '';
-    position: absolute;
-    right: 5px;
-    top: 10px;
-    border-style: solid;
-    border-width: 7px 5px 0 5px;
-    border-color: #000000 transparent transparent transparent;
-    
-   
+.select-cont:before {
+  content: "";
+  position: absolute;
+  right: 5px;
+  top: 10px;
+  border-style: solid;
+  border-width: 7px 5px 0 5px;
+  border-color: #000000 transparent transparent transparent;
 }
 
 .select-cont select {
-    text-transform: capitalize;
-    padding: 5px 8px;
-    width: 100%;
-    text-align: center;
-    border: none;
-    font-size: 1.2em;
-    background-color: var(--secundario);
-    appearance: none;
-    
+  text-transform: capitalize;
+  padding: 5px 8px;
+  width: 100%;
+  text-align: center;
+  border: none;
+  font-size: 1.2em;
+  background-color: var(--secundario);
+  appearance: none;
 }
 
-.select-cont:hover{
-    box-shadow: 0px -4px 67px 0px rgba(255,0,110,0.26);
--webkit-box-shadow: 0px -4px 67px 0px rgba(255,0,110,0.26);
--moz-box-shadow: 0px -4px 67px 0px rgba(255,0,110,0.26);
+.select-cont:hover {
+  box-shadow: 0px -4px 67px 0px rgba(255, 0, 110, 0.26);
+  -webkit-box-shadow: 0px -4px 67px 0px rgba(255, 0, 110, 0.26);
+  -moz-box-shadow: 0px -4px 67px 0px rgba(255, 0, 110, 0.26);
 }
 
-@media (max-width: 375px){
-  .select-cont{
+.slider-one-game-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+  margin-bottom: 30px;
+}
+
+.slider-one-game {
+  border: 1px solid rgb(156, 156, 156);
+  padding: 10px 40px 50px 40px;
+  border-radius: 5px;
+  background-color: black;
+}
+
+.slider-browser-container {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
+}
+
+.slider-browser {
+  width: 80vw;
+  border: 1px solid rgb(156, 156, 156);
+  padding: 30px;
+  border-radius: 5px;
+  background-color: black;
+}
+
+.FetchApi__container-games {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 30px;
+}
+
+.FetchApi__container-columnfilms {
+  width: 370px;
+  border: 1px solid rgb(156, 156, 156);
+  background-color: black;
+  height: 100%;
+  margin-right: 90px;
+}
+
+@media (max-width: 375px) {
+  .select-cont {
     width: 100%;
   }
-  .search-box{
+  .search-box {
     margin-right: 25px;
+  }
+
+  .FetchApi__container-columnfilms {
+    display: none;
+  }
+  .img-display {
+    border: none;
+    width: 100%;
   }
 }
